@@ -33,7 +33,7 @@
   mingw32-cygutils.xml:2010090600
   mingw32-expat.xml:2010052100
   mingw32-gcc3.xml:2010083100
-  mingw32-gcc4.xml:2010100100
+  mingw32-gcc4.xml:2011011200
   mingw32-gdb.xml:2010092500
   mingw32-gendef.xml:2010090600
   mingw32-gettext.xml:2010090600
