@@ -25,7 +25,7 @@
       <licence tarname="gcc-%-mingw32-lic.tar.lzma" />
 
       <component class="lic">
-        <release tarname="gcc-4.5.0-1-mingw32-lic.tar.lzma" />
+        <release tarname="gcc-4.5.2-1-mingw32-lic.tar.lzma" />
       </component>
 
       <component class="bin">
@@ -37,15 +37,15 @@
         <requires eq="libmpc-*-mingw32-dll-2.tar" />
         <requires eq="libgomp-%-mingw32-dll-1.tar" />
         <requires eq="pthreads-w32-*-mingw32-dev.tar" />
-        <release tarname="gcc-core-4.5.0-1-mingw32-bin.tar.lzma" />
+        <release tarname="gcc-core-4.5.2-1-mingw32-bin.tar.lzma" />
       </component>
 
       <component class="doc">
-        <release tarname="gcc-4.5.0-1-mingw32-doc.tar.lzma" />
+        <release tarname="gcc-4.5.2-1-mingw32-doc.tar.lzma" />
       </component>
 
       <component class="lang">
-        <release tarname="gcc-4.5.0-1-mingw32-lang.tar.lzma" />
+        <release tarname="gcc-4.5.2-1-mingw32-lang.tar.lzma" />
       </component>
     </package>
 
@@ -72,7 +72,7 @@
       <licence tarname="gcc-%-mingw32-lic.tar.lzma" />
 
       <component class="dll">
-        <release tarname="libgcc-4.5.0-1-mingw32-dll-1.tar.lzma" />
+        <release tarname="libgcc-4.5.2-1-mingw32-dll-1.tar.lzma" />
       </component>
     </package>
 
@@ -94,8 +94,8 @@
       <licence tarname="gcc-%-mingw32-lic.tar.lzma" />
 
       <requires eq="gcc-core-%-mingw32-bin.tar" />
-      <requires eq="libgnat-%-mingw32-dll-45.tar" />
-      <release tarname="gcc-ada-4.5.0-1-mingw32-bin.tar.lzma" />
+      <requires eq="libgnat-%-mingw32-dll-4_5.tar" />
+      <release tarname="gcc-ada-4.5.2-1-mingw32-bin.tar.lzma" />
     </package>
 
     <package name="mingw32-libgnat" alias="libgnat">
@@ -118,9 +118,7 @@
       <licence tarname="gcc-%-mingw32-lic.tar.lzma" />
 
       <component class="dll">
-        <release tarname="libgnat-4.5.0-1-mingw32-dll-45.tar.lzma">
-          <download tarname="libgnat-4.5.0-1-mingw32-dll-4.5.tar.lzma" />
-        </release>
+        <release tarname="libgnat-4.5.2-1-mingw32-dll-4_5.tar.lzma" />
       </component>
     </package>
 
@@ -143,7 +141,7 @@
 
       <requires eq="gcc-core-%-mingw32-bin.tar" />
       <requires eq="libstdc++-%-mingw32-dll-6.tar" />
-      <release tarname="gcc-c++-4.5.0-1-mingw32-bin.tar.lzma" />
+      <release tarname="gcc-c++-4.5.2-1-mingw32-bin.tar.lzma" />
     </package>
 
     <package name="mingw32-libstdc++" alias="libstdc++">
@@ -166,7 +164,7 @@
       <licence tarname="gcc-%-mingw32-lic.tar.lzma" />
 
       <component class="dll">
-        <release tarname="libstdc++-4.5.0-1-mingw32-dll-6.tar.lzma" />
+        <release tarname="libstdc++-4.5.2-1-mingw32-dll-6.tar.lzma" />
       </component>
     </package>
 
@@ -189,7 +187,7 @@
 
       <requires eq="gcc-core-%-mingw32-bin.tar" />
       <requires eq="libgfortran-%-mingw32-dll-3.tar" />
-      <release tarname="gcc-fortran-4.5.0-1-mingw32-bin.tar.lzma" />
+      <release tarname="gcc-fortran-4.5.2-1-mingw32-bin.tar.lzma" />
     </package>
 
     <package name="mingw32-libgfortran" alias="libgfortran">
@@ -212,7 +210,7 @@
       <licence tarname="gcc-%-mingw32-lic.tar.lzma" />
 
       <component class="dll">
-        <release tarname="libgfortran-4.5.0-1-mingw32-dll-3.tar.lzma" />
+        <release tarname="libgfortran-4.5.2-1-mingw32-dll-3.tar.lzma" />
       </component>
     </package>
 
@@ -235,7 +233,7 @@
       <licence tarname="gcc-%-mingw32-lic.tar.lzma" />
 
       <requires eq="gcc-core-%-mingw32-bin.tar" />
-      <release tarname="gcc-java-4.5.0-1-mingw32-bin.tar.lzma" />
+      <release tarname="gcc-java-4.5.2-1-mingw32-bin.tar.lzma" />
     </package> -->
 
     <package name="mingw32-gcc-objc" alias="gcc-objc objc">
@@ -257,7 +255,7 @@
 
       <requires eq="gcc-core-%-mingw32-bin.tar" />
       <requires eq="libobjc-%-mingw32-dll-2.tar" />
-      <release tarname="gcc-objc-4.5.0-1-mingw32-bin.tar.lzma" />
+      <release tarname="gcc-objc-4.5.2-1-mingw32-bin.tar.lzma" />
     </package>
 
     <package name="mingw32-libobjc" alias="libobjc">
@@ -280,7 +278,7 @@
       <licence tarname="gcc-%-mingw32-lic.tar.lzma" />
 
       <component class="dll">
-        <release tarname="libobjc-4.5.0-1-mingw32-dll-2.tar.lzma" />
+        <release tarname="libobjc-4.5.2-1-mingw32-dll-2.tar.lzma" />
       </component>
     </package>
 
@@ -292,7 +290,7 @@
 
       <component class="dll">
         <requires eq="libpthread-*-mingw32-dll-2.tar" />
-        <release tarname="libgomp-4.5.0-1-mingw32-dll-1.tar.lzma" />
+        <release tarname="libgomp-4.5.2-1-mingw32-dll-1.tar.lzma" />
       </component>
     </package>
 
@@ -303,7 +301,7 @@
       <licence tarname="gcc-%-mingw32-lic.tar.lzma" />
 
       <component class="dll">
-        <release tarname="libssp-4.5.0-1-mingw32-dll-0.tar.lzma" />
+        <release tarname="libssp-4.5.2-1-mingw32-dll-0.tar.lzma" />
       </component>
     </package>
 
